create login page and logic for login page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<strong> Marking board</strong>
+<app-background></app-background>
+<div class="main__wrap">
+  <app-header></app-header>
+  <main class="main">
+    <router-outlet></router-outlet>
+  </main>
+</div>
