--- a/src/app/public/pages/login/login.component.html
+++ b/src/app/public/pages/login/login.component.html
@@ -74,6 +74,10 @@
       {{error}}
     </div>
 
+    <div class="alert-error" *ngIf="message">
+      {{ message }}
+    </div>
+
 
     <a>Forgot password?</a>
 
