--- a/src/app/public/pages/registration/registration.component.html
+++ b/src/app/public/pages/registration/registration.component.html
@@ -2,7 +2,7 @@
   <div class="window__wrap">
 
     <div class="title">
-      <span>entrance in  <br> marking board</span>
+      <span>Registration form</span>
       <span class="title-red">.</span>
     </div>
 
@@ -10,9 +10,22 @@
     <form class="form" [formGroup]="form" (ngSubmit)="submit()">
       <div
         class="form__control"
+        [ngClass]="{invalid: form.controls.name.touched && form.controls.name.errors}"
+      >
+        <input type="text" placeholder="Surname and Name" formControlName="name">
+        <div
+          *ngIf="form.controls.name.touched && form.controls.name.invalid"
+          class="validation">
+          <small *ngIf="form.controls.name.hasError('required')">
+            Field title is required
+          </small>
+        </div>
+      </div>
+      <div
+        class="form__control"
         [ngClass]="{invalid: form.controls.email.touched && form.controls.email.errors}"
       >
-        <input type="email" placeholder="Email" formControlName="email" value="test@gmail.com">
+        <input type="email" placeholder="Email" formControlName="email">
         <div
           *ngIf="form.controls.email.touched && form.controls.email.invalid"
           class="validation">
@@ -26,7 +39,7 @@
       </div>
 
       <div
-        class="form__control mb-24"
+        class="form__control"
         [ngClass]="{invalid: form.controls.password.touched && form.controls.password.errors}"
       >
         <input type="password" placeholder="Password" formControlName="password" value="123456789Zaq">
@@ -43,19 +56,33 @@
             {{form.controls.password.errors?.['minlength'].actualLength}}
           </small>
           <small *ngIf="form.controls.password.hasError('pattern')">
-             Password must contain at least one uppercase letter, one lowercase letter, and one digit
+            Password must contain at least one uppercase letter, one lowercase letter, and one digit
           </small>
         </div>
       </div>
 
+      <div
+        class="form__control mb-24"
+        [ngClass]="{invalid: form.controls.confirmPassword.touched && form.controls.confirmPassword.errors}"
+      >
+        <input type="password" placeholder="Confirm Password" formControlName="confirmPassword" value="123456789Zaq">
+        <div
+          *ngIf="form.controls.confirmPassword.touched && form.controls.confirmPassword.invalid"
+          class="validation">
+          <small *ngIf="form.controls.confirmPassword.hasError('required')">
+            Field Confirm Password is required
+          </small>
+          <small *ngIf="form.controls.confirmPassword.touched && form.controls.confirmPassword.hasError('mismatch')">
+            Passwords must match
+          </small>
 
-      <label class="form__control mb-32 form__control-checkbox">
-        <input type="checkbox"
-               [(ngModel)]="isChecked"
-               [ngModelOptions]="{standalone: true}">
-        <span class="checkmark"></span>
-        Remember me
-      </label>
+        </div>
+
+<!--        {{ form.errors | json }}-->
+      </div>
+
+
+
 
       <button
         class="btn-red"
@@ -66,20 +93,10 @@
           <polygon fill="none" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
           <polygon fill="transparent" stroke="#FF1822" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
         </svg>
-        <span>LOG IN</span>
+        <span>Registration</span>
       </button>
 
     </form>
-
-
-    <div class="alert-error" *ngIf="auth.error$ | async as error">
-      {{error}}
-    </div>
-
-    <div class="alert-error" *ngIf="message">
-      {{ message }}
-    </div>
-
 
   </div>
 </div>
