--- a/src/styles/layout/_window.scss
+++ b/src/styles/layout/_window.scss
@@ -9,6 +9,10 @@
     font-size: em(16);
     color: $red-color;
     padding-bottom: em(15, 16);
+
+    &.green {
+      color: $green-color;
+    }
   }
 
 
