--- a/src/styles/shared/colors.scss
+++ b/src/styles/shared/colors.scss
@@ -2,5 +2,6 @@ $base-color: #0B0C0C;
 $text-color: #A1A1A1;
 $white-color: #FFFFFF;
 $red-color: #FF1822;
+$green-color: #00CF2C;
 $black-color: #000000;
 $grey-color: #1A1A1A;
