Code is rewritten in auth.service. The logic of singUp method was rewritten and logic for written data to the database.

--- a/src/app/public/pages/registration/registration.component.html
+++ b/src/app/public/pages/registration/registration.component.html
@@ -93,5 +93,9 @@
 
     </form>
 
+    <div class="alert-error" *ngIf="auth.error$ | async as error">
+      {{error}}
+    </div>
+
   </div>
 </div>
