created header elements for logged user

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -15,12 +15,65 @@
       </button>
     </div>
     <ng-template #elseBlock>
-      <button class="button width-179">
-        <svg width="179" height="45" viewBox="0 0 179 45" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M1 1V44H161.168L177.617 27.5503V1H1Z" stroke="#FF1822"/>
-        </svg>
-        <span>Super</span>
-      </button>
+      <div class="header__user">
+        <label class="switcher" for="toggleTheme">
+          <input
+            id="toggleTheme"
+            type="checkbox">
+          <span class="slider"></span>
+          <div class="dark">
+            <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M4.99807 17.0892C10.9408 17.0892 15.7584 12.3213 15.7584 6.43972C15.7584 5.08596 15.5032 3.79121 15.0378 2.60001C19.3845 3.96815 22.5334 7.99538 22.5334 12.7505C22.5334 18.6321 17.7159 23.4 11.7731 23.4C7.19816 23.4 3.29006 20.5743 1.7334 16.5902C2.76305 16.9143 3.85993 17.0892 4.99807 17.0892Z" stroke="#A1A1A1"/>
+            </svg>
+          </div>
+          <div class="white">
+            <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_7_42)">
+                <ellipse cx="12.7708" cy="12.7706" rx="4.81765" ry="4.81765" stroke="#A1A1A1"/>
+                <line x1="12.5" y1="5.20001" x2="12.5" y2="-0.305871" stroke="#A1A1A1"/>
+                <line x1="18" y1="7.06384" x2="21.8932" y2="3.17059" stroke="#A1A1A1"/>
+                <line x1="20.5703" y1="12.2706" x2="26.0762" y2="12.2706" stroke="#A1A1A1"/>
+                <line y1="-0.5" x2="5.50589" y2="-0.5" transform="matrix(0.707107 0.707106 -0.707107 0.707106 18.3535 18.1238)" stroke="#A1A1A1"/>
+                <line x1="12.5" y1="25.847" x2="12.5" y2="20.3412" stroke="#A1A1A1"/>
+                <line x1="3.40035" y1="21.6635" x2="7.2936" y2="17.7702" stroke="#A1A1A1"/>
+                <line x1="-0.0761719" y1="12.2706" x2="5.42971" y2="12.2706" stroke="#A1A1A1"/>
+                <line x1="4.10746" y1="3.17059" x2="8.00071" y2="7.06383" stroke="#A1A1A1"/>
+              </g>
+              <defs>
+                <clipPath id="clip0_7_42">
+                  <rect width="26" height="26" fill="white"/>
+                </clipPath>
+              </defs>
+            </svg>
+          </div>
+        </label>
+        <div class="admin">
+          <span>АДМИН ПАНЕЛЬ</span>
+        </div>
+        <ul class="user">
+          <li class="user__name">
+            <span>АРСЕН БЕРЕЗОВСКИЙ</span>
+            <svg width="8" height="5" viewBox="0 0 8 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M4 4.5L8 0H0L4 4.5Z" fill="white"/>
+            </svg>
+            <ul class="user__possibilities">
+              <li class="edit">
+                <span>Редактировать</span>
+              </li>
+              <li class="logout">
+                <span>Выйти</span>
+              </li>
+            </ul>
+          </li>
+
+        </ul>
+        <div class="logout-btn">
+          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M30.627 25.4955C29.3313 28.4212 27.0724 30.8148 24.2265 32.2777C21.3807 33.7406 18.1195 34.1844 14.9862 33.5353C11.8529 32.8862 9.0365 31.1834 7.00599 28.7103C4.97548 26.2373 3.85341 23.1433 3.82663 19.9436C3.79985 16.7438 4.86998 13.6315 6.85882 11.1248C8.84765 8.61812 11.6352 6.86837 14.7572 6.16692C17.8792 5.46548 21.1473 5.85468 24.0172 7.26972C26.8872 8.68475 29.1858 11.0402 30.5303 13.9439" stroke="#FF1822"/>
+            <line class="line" x1="18" y1="19.5" x2="39" y2="19.5" stroke="white"/>
+          </svg>
+        </div>
+      </div>
     </ng-template>
 
   </nav>
