--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/shared/functions';
+@import 'src/styles/shared/colors';
 
 .header {
-
   position: absolute;
   top: 0;
   left: 0;
@@ -24,6 +24,177 @@
   .button {
     &:nth-of-type(1) {
       margin-right: em(24);
+    }
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+    z-index: 1;
+
+    .logout-btn {
+      width: em(40);
+      height: em(40);
+      margin-left: em(16);
+      cursor: pointer;
+
+      .line {
+        transition: all .3s ease-in-out;
+      }
+
+      &:hover {
+        .line {
+          transform: translateX(em(-6));
+        }
+      }
+    }
+
+    .user {
+      position: relative;
+
+      ul {
+        opacity: 0;
+        transition: all .3s ease-in-out;
+        visibility: hidden;
+        user-select: none;
+      }
+
+      li:hover  {
+        ul {
+          opacity: 1;
+          visibility: visible;
+          user-select: auto;
+        }
+      }
+      &__name {
+        display: flex;
+        align-items: center;
+        margin-left: em(34);
+        cursor: pointer;
+
+        span {
+          text-transform: uppercase;
+          color: $white-color;
+          font-weight: 600;
+          font-size: em(13);
+          margin-right: em(12,13);
+        }
+        svg {
+          width: em(8);
+        }
+
+      }
+      &__possibilities {
+        width: em(140);
+        position: absolute;
+        right: 0;
+        top: em(30);
+
+        li {
+          height: em(39);
+          background-color: $base-color;
+          border-bottom: em(3) solid $black-color;
+          padding: em(12);
+          display: flex;
+          align-items: center;
+
+          span {
+            font-size: em(13);
+            line-height: 1;
+            color: $text-color;
+            text-transform: initial;
+          }
+          &:last-child {
+            border-bottom: none;
+          }
+        }
+      }
+    }
+
+    .admin {
+      color: $red-color;
+      font-weight: 600;
+      margin-left: em(36, 13);
+      font-size: em(13);
+    }
+
+    .switcher {
+      position: relative;
+      display: inline-block;
+      width: em(90);
+      height: em(43);
+      z-index: 5;
+      cursor: pointer;
+
+      input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: $base-color;
+        transition: .4s;
+
+        &::before {
+          position: absolute;
+          content: "";
+          height: em(43);
+          width: em(45);
+          left: 0;
+          bottom: 0;
+          z-index: 2;
+          background-color: $red-color;
+          transition: .4s;
+        }
+      }
+      .white svg {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: em(10);
+        z-index: 3;
+        width: em(26);
+        height: em(26);
+        ellipse, line {
+          stroke: $white-color;
+          transition: all .4s ease-in-out;
+        }
+      }
+
+      .dark svg {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: em(10);
+        z-index: 3;
+        width: em(26);
+        height: em(26);
+
+        path {
+          transition: all .4s ease-in-out;
+        }
+      }
+
+      input:checked + .slider::before {
+        transform: translateX(em(45));
+      }
+      input:checked ~ .dark svg {
+        path {
+          stroke: $white-color;
+        }
+      }
+      input:checked ~ .white svg {
+        ellipse, line {
+          stroke: $text-color;
+        }
+      }
     }
   }
 }
