Added user information after login about themselves.

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -23,7 +23,7 @@
         </div>
         <ul class="user">
           <li class="user__name">
-            <span>АРСЕН БЕРЕЗОВСКИЙ</span>
+            <span>{{ user?.name }}</span>
             <svg width="8" height="5" viewBox="0 0 8 5" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M4 4.5L8 0H0L4 4.5Z" fill="white"/>
             </svg>
@@ -48,4 +48,5 @@
     </ng-template>
 
   </nav>
+<!--  <button style="background-color: #00CF2C" (click)="this.serv.getUserById('0')">Ghfdfdf</button>-->
 </header>
