--- a/src/app/public/pages/login/login.component.html
+++ b/src/app/public/pages/login/login.component.html
@@ -12,7 +12,7 @@
         class="form__control"
         [ngClass]="{invalid: form.controls.email.touched && form.controls.email.errors}"
       >
-        <input type="email" placeholder="Email" formControlName="email" value="test@gmail.com">
+        <input type="email" placeholder="Email" formControlName="email">
         <div
           *ngIf="form.controls.email.touched && form.controls.email.invalid"
           class="validation">
@@ -29,7 +29,7 @@
         class="form__control mb-24"
         [ngClass]="{invalid: form.controls.password.touched && form.controls.password.errors}"
       >
-        <input type="password" placeholder="Password" formControlName="password" value="123456789Zaq">
+        <input type="password" placeholder="Password" formControlName="password">
         <div
           *ngIf="form.controls.password.touched && form.controls.password.invalid"
           class="validation">
