--- a/src/app/shared/components/theme-toggle/theme-toggle.component.scss
+++ b/src/app/shared/components/theme-toggle/theme-toggle.component.scss
@@ -10,11 +10,7 @@
   z-index: 5;
   cursor: pointer;
 
-  input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
+
 
   .slider {
     position: absolute;
@@ -31,7 +27,7 @@
       content: "";
       height: em(43);
       width: em(45);
-      left: 0;
+      right: 0;
       bottom: 0;
       z-index: 2;
       background-color: var(--red-color);
@@ -66,17 +62,17 @@
     }
   }
 
-  input:checked + .slider::before {
-    transform: translateX(em(45));
-  }
-  input:checked ~ .dark svg {
-    path {
-      stroke: var(--toggle-svg-color);
-    }
-  }
-  input:checked ~ .white svg {
-    ellipse, line {
-      stroke: var(--toggle-svg-checked-color);
-    }
-  }
+  //input:checked + .slider::before {
+  //  transform: translateX(em(45));
+  //}
+  //input:checked ~ .dark svg {
+  //  path {
+  //    stroke: var(--toggle-svg-color);
+  //  }
+  //}
+  //input:checked ~ .white svg {
+  //  ellipse, line {
+  //    stroke: var(--toggle-svg-checked-color);
+  //  }
+  //}
 }
