fixed styles for theme toggle

--- a/src/app/shared/components/theme-toggle/theme-toggle.component.scss
+++ b/src/app/shared/components/theme-toggle/theme-toggle.component.scss
@@ -62,6 +62,21 @@
     }
   }
 
+  &.light {
+    .slider::before {
+      transform: translateX(em(-45));
+    }
+    .dark svg {
+        path {
+          stroke: var(--toggle-svg-color);
+        }
+      }
+    .white svg {
+        ellipse, line {
+          stroke: var(--toggle-svg-checked-color);
+        }
+      }
+  }
   //input:checked + .slider::before {
   //  transform: translateX(em(45));
   //}
