--- a/src/styles/layout/_global.scss
+++ b/src/styles/layout/_global.scss
@@ -11,8 +11,8 @@
   --green-color: #00CF2C;
   --window-color: #0B0C0C;
   --toggle-color: #0B0C0C;
-  --toggle-svg-color: #FFFFFF;
-  --toggle-svg-checked-color: #A1A1A1;
+  --toggle-svg-color: #A1A1A1;
+  --toggle-svg-checked-color: #FFFFFF;
   --white-color: #FFFFFF;
   --input-color: #1A1A1A;
 
