--- a/src/styles/layout/_form.scss
+++ b/src/styles/layout/_form.scss
@@ -1,5 +1,5 @@
 @import '../shared/functions';
-@import 'src/styles/shared/colors';
+
 
 .form {
   width: 100%;
@@ -15,7 +15,7 @@
 
       small {
         font-size: em(10);
-        color: $red-color;
+        color: var(--red-color);
         display: block;
       }
     }
@@ -31,15 +31,23 @@
     label {
       cursor: pointer;
     }
+    label {
+      span {
+        font-size: em(12);
+        text-transform: uppercase;
+        margin-bottom: em(12, 12);
+        display: inline-block;
+      }
 
+    }
     input {
       font-size: 1em;
       display: block;
       height: em(53);
       width: 100%;
-      color: $text-color;
-      background: $grey-color;
-      border: em(1) solid $grey-color;
+      color: var(--text-color);
+      background: var(--input-color);
+      border: em(1) solid var(--input-color);
       padding: 0 em(16);
       margin: 0;
 
@@ -52,8 +60,8 @@
       }
 
       &[type=checkbox]:checked ~ .checkmark {
-        background-color: $red-color;
-        border: em(1) solid $red-color;
+        background-color: var(--red-color);
+        border: em(1) solid var(--red-color);
 
         &:after {
           opacity: 1;
@@ -76,8 +84,8 @@
         position: relative;
         top: 0;
         left: 0;
-        background: $grey-color;
-        border: em(1) solid $grey-color;
+        background: var(--input-color);
+        border: em(1) solid var(--input-color);
         width: em(31);
         height: em(31);
         margin-right: em(15);
@@ -98,7 +106,7 @@
 
     &.invalid {
       input {
-        border: em(1) solid $red-color;
+        border: em(1) solid var(--red-color);
       }
     }
   }
@@ -122,7 +130,7 @@
         display: inline-block;
         width: em(80);
         height: em(1);
-        background-color: $white-color;
+        background-color: var(--btn-red-text-color);
         transition: all .3s ease-in-out;
       }
     }
