--- a/src/styles/layout/_global.scss
+++ b/src/styles/layout/_global.scss
@@ -1,12 +1,38 @@
 @import '../shared/functions';
-@import 'src/styles/shared/colors';
 
+
+:root {
+  --base-color: #0B0C0C;
+  --background-color: #000000;
+  --text-color: #A1A1A1;
+  --title-color: #FFFFFF;
+  --btn-red-text-color: #FFFFFF;
+  --red-color: #FF1822;
+  --green-color: #00CF2C;
+  --window-color: #0B0C0C;
+  --toggle-color: #0B0C0C;
+  --toggle-svg-color: #A1A1A1;
+  --toggle-svg-checked-color: #FFFFFF;
+  --white-color: #FFFFFF;
+  --input-color: #1A1A1A;
+
+}
+html.light {
+  --base-color: #9e9e9e;
+  --background-color: #b9b9b9;
+  --btn-red-text-color: #000000;
+  --window-color: #373737;
+  --input-color: #4b4b4b;
+  --text-color: #FFFFFF;
+  --title-color: #000000;
+  --toggle-color: #373737;
+}
 
 html {
   scroll-behavior: smooth;
   font-size: vp(1920);
   height: 100%;
-  background-color: $black-color;
+  background-color: var(--black-color);
 }
 
 body {
@@ -15,7 +41,9 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-weight: normal;
   font-style: normal;
-  color: $text-color;
+  color: var(--text-color);
+  background-color: var(--background-color);
+  //background-color: var(--background-color);
 }
 
 .main__wrap{
@@ -23,7 +51,8 @@ body {
   flex-direction: column;
   min-height: 100%;
   overflow: hidden;
-  background-color: $black-color;
+  background-color: var(--black-color);
+  //background-color: var(--background-color);
 }
 
 app-header {
