--- a/src/styles/layout/_button.scss
+++ b/src/styles/layout/_button.scss
@@ -1,7 +1,5 @@
 @import '../shared/functions';
-
-
-
+@import 'src/styles/shared/colors';
 
 button {
   position: relative;
@@ -15,7 +13,7 @@ button {
   z-index: 1;
 
   span {
-    color: var(--btn-red-text-color);
+    color: $white-color;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     line-height: 1;
@@ -40,7 +38,7 @@ button {
   &:hover {
     svg {
       path {
-        fill: var(--red-color);
+        fill: $red-color;
       }
     }
   }
@@ -61,7 +59,7 @@ button {
 .hover-text-red {
   &:hover {
     span {
-      color: var(--red-color);
+      color: $red-color;
     }
   }
 }
@@ -76,7 +74,7 @@ button {
   &:hover {
     svg {
       polygon {
-        fill: var(--red-color);
+        fill: $red-color;
       }
     }
   }
