add review changes and  rework themetoggle logiс

--- a/src/app/shared/components/theme-toggle/theme-toggle.component.html
+++ b/src/app/shared/components/theme-toggle/theme-toggle.component.html
@@ -1,8 +1,8 @@
 <div
   (click)="isToggleTheme()"
   [ngClass]="{
-    'light': isToggle,
-    'dark': !isToggle
+    'light': (themeService.theme$ | async) === 'light',
+    'dark': (themeService.theme$ | async) === 'dark'
   }"
   class="switcher">
 
