set types for functions and uncommenting theme-toggle component

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -16,7 +16,7 @@
     </div>
     <ng-template #elseBlock>
       <div class="header__user">
-<!--        <app-theme-toggle></app-theme-toggle>-->
+        <app-theme-toggle></app-theme-toggle>
 
         <div *ngIf="user?.hasPerm" class="admin">
           <span>АДМИН ПАНЕЛЬ</span>
