Created a dialog for editing user's name used Angular Material

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -28,6 +28,9 @@
               <path d="M4 4.5L8 0H0L4 4.5Z" fill="white"/>
             </svg>
             <ul class="user__possibilities">
+              <li (click)="openDialog()">
+                <span>Edit</span>
+              </li>
             </ul>
           </li>
 
