add review changes and add loader

--- a/src/app/shared/components/edit-form/edit-form.component.scss
+++ b/src/app/shared/components/edit-form/edit-form.component.scss
@@ -17,7 +17,7 @@ button {
 
 }
 .close {
-  color: #A1A1A1;
+  color: var(--text-color);
   font-size: em(25);
   position: absolute;
   right: em(15);
