--- a/src/app/shared/components/edit-form/edit-form.component.html
+++ b/src/app/shared/components/edit-form/edit-form.component.html
@@ -24,16 +24,18 @@
         </div>
       </div>
 
+
+
       <button
         class="btn-red"
         type="submit"
-        [disabled]="form.invalid || submitted"
+        [disabled]="form.invalid || isLoading"
       >
         <svg viewBox="0 0 225 56" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
           <polygon fill="none" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
           <polygon fill="transparent" stroke="#FF1822" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
         </svg>
-        <span>Save changes</span>
+        <span>{{ isLoading ? 'Saving...' : 'Save changes' }}</span>
       </button>
 
     </form>
@@ -45,4 +47,8 @@
     <button class="close" (click)="close()">X</button>
 
   </div>
+</div>
+
+<div *ngIf="isLoading" class="loader">
+  <img src="../../../../assets/img/loader.gif" alt="">
 </div>
