--- a/src/styles/layout/_global.scss
+++ b/src/styles/layout/_global.scss
@@ -43,7 +43,6 @@ body {
   font-style: normal;
   color: var(--text-color);
   background-color: var(--background-color);
-  //background-color: var(--background-color);
 }
 
 .main__wrap{
@@ -52,7 +51,6 @@ body {
   min-height: 100%;
   overflow: hidden;
   background-color: var(--black-color);
-  //background-color: var(--background-color);
 }
 
 app-header {
@@ -67,12 +65,42 @@ main {
   flex-direction: column;
 }
 
-.editForm{
+.loader {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 100;
+
+  img {
+    width: em(100);
+  }
+}
+
+.editForm {
   max-width: none !important;
   width: 100%;
+  height: 100%;
 }
 .editForm .mat-mdc-dialog-container .mdc-dialog__surface {
   background-color: transparent !important;
   border-radius: 0;
   max-width: none !important;
+  box-shadow: none;
+  display: flex;
+  justify-content: center;
+
+}
+.editForm .mat-mdc-dialog-surface .mdc-dialog__surface {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
