added review changes, added loader component

--- a/src/app/shared/components/edit-form/edit-form.component.html
+++ b/src/app/shared/components/edit-form/edit-form.component.html
@@ -40,15 +40,9 @@
 
     </form>
 
-    <div class="alert-error" *ngIf="auth.error$ | async as error">
-      {{error}}
-    </div>
-
     <button class="close" (click)="close()">X</button>
 
   </div>
 </div>
 
-<div *ngIf="isLoading" class="loader">
-  <img src="../../../../assets/img/loader.gif" alt="">
-</div>
+<app-loader *ngIf="isLoading" ></app-loader>
