--- a/src/styles/layout/_global.scss
+++ b/src/styles/layout/_global.scss
@@ -65,21 +65,22 @@ main {
   flex-direction: column;
 }
 
-.editForm {
+.dialog {
   max-width: none !important;
   width: 100%;
   height: 100%;
 }
-.editForm .mat-mdc-dialog-container .mdc-dialog__surface {
+
+.dialog .mat-mdc-dialog-container .mdc-dialog__surface {
   background-color: transparent !important;
   border-radius: 0;
   max-width: none !important;
   box-shadow: none;
   display: flex;
   justify-content: center;
-
 }
-.editForm .mat-mdc-dialog-surface .mdc-dialog__surface {
+
+.dialog .mat-mdc-dialog-surface .mdc-dialog__surface {
   display: flex;
   justify-content: center;
   align-items: center;
