Created a dialog for editing user's name used Angular Material (#8)
* Created a dialog for editing user's name used Angular Material

* add edit-form component

* add review changes and add loader

* added review changes, added loader component

* added finalize function, generic type and others review changes

* remove isLoading from subscribe when complete

* update saveInfoUserInFirebase method

* update saveInfoUserInFirebase method 2

* remove loader gif

* rename class for dialog, add loader for login and registration page, add error handling in auth.service and formatted code

* remove variable submitted

--- a/src/app/public/pages/login/login.component.html
+++ b/src/app/public/pages/login/login.component.html
@@ -51,7 +51,7 @@
       <button
         class="btn-red"
         type="submit"
-        [disabled]="form.invalid || submitted"
+        [disabled]="form.invalid || isLoading"
       >
         <svg viewBox="0 0 225 56" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
           <polygon fill="none" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
@@ -74,3 +74,5 @@
 
   </div>
 </div>
+
+<app-loader *ngIf="isLoading" ></app-loader>
